[package]
name = "hecdss"
version = "0.2.0"
authors = ["Gyan Basyal <gyanbasyalz@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["hecdss"]
description = """
Safe Rust API for HEC-DSS7 C library.
"""
categories = ["HEC-DSS","api-bindings"]
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
hecdss-sys = {version="0.2.0",path="hecdss-sys"}
nonparallel = {git ="https://github.com/dbrgn/nonparallel",default-features=false,optional=true}
regex = "1"
lazy_static = {version = "1.4.0",optional=true}

[features]
default = ["threadsafe"]
threadsafe = ["nonparallel","lazy_static"]

[env]
RUSTFLAGS = ["dead_code"]
