[package]
name = "hecdss-sys"
version = "0.2.0"
authors = ["Gyan Basyal <gyanbasyalz@gmail.com>"]
build = "build.rs"
links = "heclib"
license = "MIT/Apache-2.0"
description = """
Rust unsafe bindings for HEC-DSS7 C library funtions and structures.
"""
categories = ["ffi-bindings"]
edition = "2021"

[lib]
path= "src/lib.rs"

[build-dependencies]
#bindgen = "0.60.1"
bindgen = "0.65.1"
